Ansible - changing the wa the shell_var will display the output to the console

--- a/quick_command_pass_as_variable.yaml
+++ b/quick_command_pass_as_variable.yaml
@@ -21,4 +21,4 @@
   
   - name: Printing out the output of the register variable in the task above
     debug:
-      var: shell_var.stdout_lines      
+      var: shell_var.stdout   
